Revision history for Test-EOL

0.7  2010-03-03
    - Deal correctly with -I includes paths that include spaces in the
      tests to stop them unexpectedly failing.
    - Remove shelling out to the system rm command in the tests
      to avoid nasty warnings on Win32.
    - Remove warning from test diagnostics

0.6  2010-01-19
     - I'm so bad at this!  Fix another logic error that made all files fail
       when using trailing_whitespace option (fREW)

0.5  2010-01-19
     - Fix logic fail that made all filenames the same if a user uses the
       trailing_whitespace option (fREW)

0.4  2010-01-19
     - Add checks for trailing whitespace (fREW)

0.3  2009-07-18
     - Fix File::Find regex which I had broken.

0.2  2009-07-17
     - Pod corrections pointed out by daxim in #moose

0.1  2009-07-15
     - Module created and released on an unsuspecting world.
